Add video link to presentation

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     <a href="http://hakim.se">Régis Behmo</a> (<a href="http://github.com/regisb">@regisb</a>) <br>
                     Open edX Conference, October 12 2015 | Wellesley, MA
 					</p>
+                    <p><small><a href="https://www.youtube.com/watch?v=V1EBo1l8BgY" target="_blank">YouTube video</a></small></p>
 				</section>
 
 				<section class="no-slide-number">
